# dion-runtime

./: .gitignore  Cargo.toml  Taskfile.yml  Taskfile_windows.yml  build.yaml  package.json  test.dion.js  todo.md  turbo.jsonc
dart/rdion_runtime/rust/: Cargo.lock1  Cargo.toml
dart/rdion_runtime/rust/src/: frb_generated.rs  lib.rs
dart/rdion_runtime/rust/src/api/: cancel.rs  client.rs  client_impls.rs  data_comp.rs  ext_wrap.rs  extension.rs  mod.rs  simple.rs  value.rs
js/node_dion_runtime/: .gitignore  Cargo.toml  README.md  biome.json  package-lock.json  package.json  tsconfig.json
js/node_dion_runtime/src/: lib.js  lib.rs  lib.ts  native.d.ts
js/node_dion_runtime/test/: testscript.js
js/runtime/: Cargo.toml  biome.json  index.d.ts  index.js  package.json  postbuild.ts  tsconfig.json  turbo.json  wasi-worker-browser.mjs
js/runtime/src/: cancel.rs  client.rs  error.rs  extension.rs  lib.rs  manager.rs
js/runtime/test/: index.test.ts
rust/core/: Cargo.toml  test.dion.js
rust/core/.cargo/: config.toml
rust/core/bindings/: RuntimeTypes.ts  index.d.ts  package.json
rust/core/bindings/src/: index.d.ts
rust/core/src/: auth.rs  client_data.rs  convert_js.rs  datastructs.rs  error.rs  extension.rs  extension_container.rs  extension_manager.rs  jsextension.rs  lib.rs  networking_js.rs  permission.rs  permission_js.rs  serde_quickjs.rs  setting_js.rs  settings.rs  utils.rs
rust/core/src/data/: action.rs  activity.rs  auth.rs  custom_ui.rs  datastructs.rs  extension.rs  extension_manager.rs  extension_repo.rs  mod.rs  permission.rs  serde.rs  settings.rs  source.rs  specta.rs
rust/core/src/extension/: extension.rs  extension_container.rs  extension_manager.rs  extension_trait.rs  mod.rs  utils.rs
rust/core/src/js/: convert_js.rs  mod.rs  networking_js.rs  parse_js.rs  permission_js.rs  setting_js.rs
rust/core/src/store/: auth.rs  mod.rs  permission.rs  settings.rs
rust/dion_extension/: Cargo.toml
rust/dion_extension/src/: extension_executor.rs  extension_manager.rs  lib.rs  network.rs  proxy.rs  specta.rs  utils.rs
rust/dion_extension/src/extension/: container.rs  executor.rs  mod.rs
rust/dion_extension/src/js/: auth_js.rs  convert_js.rs  mod.rs  networking_js.rs  parse_js.rs  permission_js.rs  setting_js.rs  specta.rs
rust/mihon/: Cargo.toml  build.rs
rust/mihon/compat/: build.gradle.kts  settings.gradle.kts
rust/mihon/compat-android/: build.gradle.kts  settings.gradle.kts
rust/mihon/compat-android/src/main/: AndroidManifest.xml
rust/mihon/compat-android/src/main/java/app/cash/quickjs/: CompiledScripts.java  QuickJs.java  QuickJsException.java
rust/mihon/compat-android/src/main/kotlin/dion/mihon/: AndroidMihonBridge.kt  ChildFirstPathClassLoader.kt  SourceManager.kt
rust/mihon/compat-android/src/main/kotlin/dion/mihon/dto/: Dtos.kt
rust/mihon/compat-android/src/main/kotlin/eu/kanade/tachiyomi/: AppInfo.kt
rust/mihon/compat-android/src/main/kotlin/okhttp3/brotli/: BrotliInterceptor.kt
rust/mihon/compat/src/main/java/android/app/: Activity.java  Application.java
rust/mihon/compat/src/main/java/android/content/: ActivityNotFoundException.java  BroadcastReceiver.java  ComponentCallbacks.java  ComponentName.java  ContentResolver.java  ContentValues.java  Context.java  ContextWrapper.java  Intent.java  IntentFilter.java  IntentSender.java  ServiceConnection.java  SharedPreferences.java
rust/mihon/compat/src/main/java/android/content/pm/: ApplicationInfo.java  PackageInfo.java  PackageItemInfo.java  PackageManager.java
rust/mihon/compat/src/main/java/android/content/res/: AssetManager.java  ColorStateList.java  Configuration.java  Resources.java  TypedArray.java
rust/mihon/compat/src/main/java/android/database/: DatabaseErrorHandler.java
rust/mihon/compat/src/main/java/android/database/sqlite/: SQLiteDatabase.java
rust/mihon/compat/src/main/java/android/graphics/: Bitmap.java  Canvas.java  ColorFilter.java  Paint.java  Point.java  Rect.java
rust/mihon/compat/src/main/java/android/graphics/drawable/: Drawable.java
rust/mihon/compat/src/main/java/android/net/: Uri.java
rust/mihon/compat/src/main/java/android/os/: Build.java  Bundle.java  Handler.java  IBinder.java  IInterface.java  LocaleList.java  Looper.java  Message.java  ParcelFileDescriptor.java  SystemClock.java  UserHandle.java
rust/mihon/compat/src/main/java/android/provider/: Settings.java
rust/mihon/compat/src/main/java/android/text/: Editable.java  Html.java  Layout.java  Spanned.java  StaticLayout.java  TextPaint.java  TextWatcher.java
rust/mihon/compat/src/main/java/android/util/: AttributeSet.java  Base64.java  Log.java  LruCache.java
rust/mihon/compat/src/main/java/android/view/: Display.java  View.java  ViewGroup.java
rust/mihon/compat/src/main/java/android/webkit/: CookieManager.java  JavascriptInterface.java  URLUtil.java  ValueCallback.java  WebChromeClient.java  WebResourceRequest.java  WebResourceResponse.java  WebSettings.java  WebView.java  WebViewClient.java
rust/mihon/compat/src/main/java/android/widget/: Button.java  EditText.java  TextView.java  Toast.java
rust/mihon/compat/src/main/java/androidx/preference/: CheckBoxPreference.java  DialogPreference.java  EditTextPreference.java  ListPreference.java  MultiSelectListPreference.java  Preference.java  PreferenceGroup.java  PreferenceScreen.java  SwitchPreferenceCompat.java  TwoStatePreference.java
rust/mihon/compat/src/main/kotlin/: IntegrationTest.kt
rust/mihon/compat/src/main/kotlin/android/preference/: PreferenceManager.kt
rust/mihon/compat/src/main/kotlin/dion/mihon/: BytecodeEditor.kt  ExtensionLoader.kt  MihonBridge.kt  SourceManager.kt
rust/mihon/compat/src/main/kotlin/okhttp3/brotli/: BrotliInterceptor.kt
rust/mihon/src/: adapter.rs  extension.rs  lib.rs  repo.rs
rust/mihon/src/apk/: manifest.rs  metadata.rs  mod.rs
rust/mihon/src/jni/: android.rs  bridge.rs  jvm.rs  mod.rs
rust/mihon/src/mapping/: dto.rs
rust/mihon/tests/: anime_smoke_test.rs  integration_test.rs
rust/simpletest/: Cargo.toml
rust/simpletest/src/: main.rs
script/: genjstypes.ts  (+3 more)
(+301 files in other folders)
