[workspace]

members = [
    "rust/core",
    "rust/dion_extension",
    "dart/rdion_runtime/rust",
    "js/dion_runtime",
]
resolver = "3"

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 1

[profile.test.package."*"]
opt-level = 3


[profile.dev]
opt-level = 1
panic = "unwind"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
