[workspace]

members = [
    "rust/core",
    "rust/dion_extension",
    "dart/rdion_runtime/rust",
    "js/runtime",
    "rust/specta_valibot",
]
resolver = "3"

[profile.bench]
opt-level = 3

[profile.dev]
opt-level = 1
debug="line-tables-only"
panic = "unwind"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
debug="none"
