[package]
name = "node_dion_runtime"
version = "0.1.0"
description = "dion extension runtime for node"
license = "ISC"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1.1"
dion-runtime = { path = "../../rust/core" }
tokio = { version = "1.34.0", features = ["full"] }
once_cell = "1"
neon-serde4 = "1.0.0"