
[package]
edition = "2021"
name = "runtime"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version="3.0.0", features=["serde-json","tokio_rt"]}
napi-derive = "3.0.0"
dion-runtime = { path = "../../rust/core" }
dion-extension = { path = "../../rust/dion_extension" }
async-trait = "0.1.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
anyhow = "1.0.0"
tokio-util = "0.7.0"

[build-dependencies]
napi-build = "2"
