[package]
name = "dion-runtime"
version = "0.1.0"
edition = "2021"

[features]
type = ["dep:specta","dep:specta-typescript", "dep:specta-valibot"]

[dependencies]
tokio = { version = "1.46.0", features = [
    # "full",
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
] }

anyhow = "1.0.0"
log = "0.4.0"

serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"

tokio-util = "0.7.0"
async-trait = "0.1.0"

specta = { version = "1.0.5", features = ["export"], optional = true  }
specta-typescript = { version = "0.0.9",optional = true }
#=2.0.0-rc.22
specta-valibot= { path = "../specta_valibot", optional = true }
