[package]
name = "simpletest"
version = "0.1.0"
edition = "2021"

[dependencies]
boa_engine = { git = "https://github.com/boa-dev/boa", rev = "a3acc1bffcad8e4cae5e2153e1d299057497e226" }
boa_runtime = { git = "https://github.com/boa-dev/boa", rev = "a3acc1bffcad8e4cae5e2153e1d299057497e226" }
quote = "1.0.38"
tokio = { version = "1.34.0", features = ["full","time"] }