[package]
name = "rdion_runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
dion-runtime = { path = "../../../rust/core" }
delegate = "0.13.0"
tokio-util = "0.7.0"
tokio = { version = "1.34.0", features = ["full"] }
async-trait = "0.1.0"
deadqueue = { version = "0.2.4", features = ["limited"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
anyhow = "1.0.98"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
opt-level = 3
strip = true
panic = "abort"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 3
panic = "abort"
